--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+@font-face {
+    font-family: 'congruency3d';
+    src: url('fonts/congruency3d-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
   margin: 0;
   background-color: rgb(37, 37, 37);
+  font-weight: 550;
 }
 input:focus{
     outline: none;
@@ -25,7 +32,7 @@ button:hover{
     cursor: pointer;
 }
 .banner {
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
     width: 100%;
     height: 450px;
     text-align: center;
@@ -37,6 +44,19 @@ button:hover{
     text-align: left;
     float: left;
 }
+.langaugelogo{
+    width: 25px;
+    float: left;
+}
+.langaugebutton{
+    border-color: rgba(0,0,0,0);
+    background-color:  rgba(0,0,0,0);
+    border-radius: 0px;
+    font-size: 17px;
+    font-weight: bold;
+    margin-left: 3px;
+    margin-top: -3px;
+}
 .mainlogo {
     width: 60%;
     float: left;
@@ -46,11 +66,20 @@ button:hover{
     text-align: center;
     padding-top: 15px;
 }
+.menubutton{
+    border-color: rgba(0,0,0,0);
+    background-color:  rgba(0,0,0,0);
+    border-radius: 0px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 10px;
+}
 .banner-menu{
-    margin-left: 20%;
-    width: 60%;
+    margin-left: 400px;
+    width: 1130px;
 }
 .banner-botton{
+    word-spacing: 20px;
     width: 50%;
     float: left;
     text-align: left;
@@ -66,46 +95,51 @@ button:hover{
     text-align: center;
     margin-left: 20%;
     width: 60%;
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
 }
 .main-left{
     float: left;
     width: 390px;
 }
 .search{
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
     width: 390px;
-    height: 28px;
+    height: 37px;
 }
 .search1{
-    width: 339px;
+    width: 320px;
     height: 22px;
     float: left;
     border-color: rgba(0,0,0,0);
     background-color: rgba(0,0,0,0);
+    font-size: 13pt;
+    margin-top: 6px;
 }
 .search2{
     border-color: rgba(0,0,0,0);
-    background-color:  rgb(202, 202, 202);
+    background-color:  rgb(120, 120, 120);
     border-radius: 0px;
-    height: 28px;
+    height: 37px;
+    width: 61px;
+    font-size: 13pt;
+    font-weight: bold;
 }
 .cha{
     margin-top: 7px;
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
     width: 390px;
 }
 .cha0{
-    background-color: rgb(202, 202, 202);
+    background-color: rgb(120, 120, 120);
     width: 390px;
-    height: 29px;
-    font-size: 13pt;
-    padding-top: 5px; 
+    height: 40px;
+    font-size: 17pt;
+    padding-top: 5px;
 }
 .cha1{
-    background-color: rgb(202, 202, 202);
+    background-color: rgb(120, 120, 120);
     margin-top: 6px;
-    height: 26px;
+    height: 30px;
 }
 
 .cha2{
@@ -114,40 +148,41 @@ button:hover{
 .chasearch{
     float: right;
     border-color: rgba(0,0,0,0);
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
     padding-right: 5px;
     width: 125px;
-    height: 13px;
+    height: 18px;
     border-radius: 0px;
     margin-top: 3px;
     margin-right: 5px;
 }
 .cha3{
-    word-spacing: 15px;
-    padding-top: 15px;
+    word-spacing: 13px;
+    padding-top: 25px;
     clear: right;
 }
 .chaimg{
-    width: 100px;
+    width: 95px;
+    background-color: rgb(120, 120, 120);
 }
 .main-right{
     float: right;
-    background-color: gray;
+    background-color: rgb(83, 83, 83);
     width: 750px;
 }
 .rank0{
-    height: 35px;
+    height: 44px;
 }
 .rank0-1{
     float: right;
     width: 60%;
     text-align: center;
-    font-size: 15pt;
-    padding-top: 3px;
+    font-size: 18pt;
+    padding-top: 4px;
     word-spacing: 20px;
 }
 .s-logo{
-    width: 25px;
+    width: 40px;
     vertical-align: middle;
     padding-right: 5px;
     padding-bottom: 5px;
@@ -160,70 +195,155 @@ button:hover{
       
 }
 .rank1{
-    background-color: rgb(202, 202, 202);
-    height: 35px;
+    background-color: rgb(120, 120, 120);
+    height: 45px;
 }
 .rank2{
-    margin-top: 5px;
-    background-color: rgb(202, 202, 202);
-    height: 27px;
+    margin-top: 6px;
+    background-color: rgb(120, 120, 120);
+    height: 30px;
+}
+
+.rank3{
+    padding-top: 3px;
+    text-align: left;
+    font-size: 9pt;
+    font-weight: 600;
+    height: 20px;
 }
 .rank-1{
     margin-top: 3px;
-    background-color:  rgb(202, 202, 202);
+    background-color:  rgb(120, 120, 120);
+    text-align: left;
 }
-.rank-1 span{
-    display:inline-block;
-    min-width: 80px;
-    max-width: 80px;
+.rank3rank{
+    padding-left: 35px;
 }
-.rank-2{
-    margin-top: 5px;
-    background-color:  rgb(202, 202, 202);
+.rank3cha{
+    padding-left: 68px;
 }
-.rank3{
-    word-spacing: 35px;
-    padding-top: 3px;
+.rank3weapone{
+    padding-left: 74px;
 }
-.rank3 span{
-    display:inline-block;
-    min-width: 80px;
-    max-width: 80px;
+.rank3tier{
+    padding-left: 48px;
 }
-/*
-.tabHeaders a {
+.rank3win{
+    padding-left: 47px;
+}
+.rank3pick{
+    padding-left: 31px;
+}
+.rank3kill{
+    padding-left: 28px;
+}
+.rank3avg{
+    padding-left: 30px;
+}
+.rank3recent{
+    padding-left: 30px;
+}
+.rank3rank1{
     text-align: center;
-    color: rgb(0, 0, 0);
-    
+    vertical-align: middle;
+    font-family: 'congruency3d';
+    font-size: 20pt;
+    display: inline-block;
+    width: 90px;
+    margin-left: 4px;
 }
-.tabHeaders a:hover {
+.rank3cha1{
+    vertical-align: middle;
+    width: 100px;
+}
+.rank3weapone1{
+    vertical-align: middle;
+    width: 42px;
+    border-radius: 7px;
+    margin-left: 32px;
+}
+.rank3tier1{
+    vertical-align: middle;
+    width: 45px;
+    margin-left: 27px;
+}
+.rank3win1{
     text-align: center;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    
+    vertical-align: middle;
+    display: inline-block;
+    width: 50px;
+    margin-left: 22px;
+}
+.rank3pick1{
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    width: 50px;
+    margin-left: 3px;
+}
+.rank3kill1{
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    width: 50px;
+    margin-left: 5px;
+}
+.rank3avg1{
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    width: 50px;
+    margin-left: 20px;
+}
+.rank3recentBurf{
+    text-align: center;
+    vertical-align: middle;
+    font-family: 'congruency3d';
+    color: rgb(0, 185, 0);
+    display: inline-block;
+    width: 50px;
+    margin-left: 20px;
+}
+.rank3recentNurf{
+    text-align: center;
+    vertical-align: middle;
+    font-family: 'congruency3d';
+    color: rgb(185, 0, 0);
+    display: inline-block;
+    width: 50px;
+    margin-left: 20px;
 }
 .tabHeaders .actived {
-    color: rgb(0, 0, 0);
-    border-bottom: 2px solid #000000;
-}
-*/
-.tabHeaders .actived {
-    border-bottom: 4px solid #000000;
+    border-bottom: 4px solid rgb(244,216,35);
+    color:  black;
 }
 .tabHeader0 {
     width: 50%;
     float: left;
-    padding-top: 11px;
+    padding-top: 20px;
+    font-weight: 550;
+    color: rgb(39, 39, 39);
 }
 .tabHeader1 {
     width: 33.3%;
     float: left;
-    padding-top: 5px;
-    padding-bottom: 3px;
-    font-size: 13pt;
+    padding-top: 8px;
+    padding-bottom: 5px;
+    font-size: 16pt;
+    color: rgb(39, 39, 39);
 }
 .tabHeader2 {
     width: 20%;
     float: left;
-    padding-top: 2px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    font-size: 11pt;
+    color:  rgb(39, 39, 39);
 }
+.tri {
+    width: 0px;
+    height: 0px;
+    border-bottom: 30px solid transparent;
+    border-left: 30px solid rgb(244,216,35);
+    float: left;
+  }
