--- a/src/index.css
+++ b/src/index.css
@@ -253,16 +253,16 @@ button:hover{
     padding-left: 47px;
 }
 .rank3pick{
-    padding-left: 35px;
+    padding-left: 46px;
 }
 .rank3kill{
-    padding-left: 35px;
+    padding-left: 42px;
 }
 .rank3avg{
-    padding-left: 35px;
+    padding-left: 19px;
 }
 .rank3recent{
-    padding-left: 35px;
+    padding-left: 30px;
 }
 .rank3rank1{
     text-align: center;
@@ -313,21 +313,21 @@ button:hover{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 50px;
+    width: 75px;
     margin-left: 6px;
 }
 .rank3kill1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 50px;
+    width: 35px;
     margin-left: 11px;
 }
 .rank3avg1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 50px;
+    width: 35px;
     margin-left: 24px;
 }
 .rank3recentBurf{
@@ -337,7 +337,7 @@ button:hover{
     color: rgb(0, 185, 0);
     display: inline-block;
     width: 50px;
-    margin-left: 24px;
+    margin-left: 25px;
     font-size: 20pt;
     border: rgb(0, 185, 0) 5px double;
     padding-left: 1px;
@@ -350,7 +350,7 @@ button:hover{
     color: rgb(185, 0, 0);
     display: inline-block;
     width: 50px;
-    margin-left: 24px;
+    margin-left: 25px;
     font-size: 20pt;
     border: rgb(185, 0, 0) 5px double;
     padding-left: 1px;
@@ -502,8 +502,10 @@ button:hover{
 }
 .S_top-cha3{
     display: inline-block;
-    width: 100px;
-    font-size: 22pt;
+    margin-top: 5px;
+    margin-left: -7px;
+    width: 120px;
+    font-size: 17pt;
     text-align: center;
     position: absolute;
 }
@@ -547,7 +549,7 @@ button:hover{
     margin-top: -5px;
     margin-left: 2px;
     width: 70px;
-    font-size: 14pt;
+    font-size: 15pt;
     text-align: center;
     color: black;
 }
@@ -646,7 +648,7 @@ button:hover{
     margin-top: 20px;
     margin-left: 23px;
     width: 340px;
-    height: 145px;
+    height: 140px;
     background-color: rgb(120, 120, 120);
     float:left;
     border-radius: 3px;
@@ -675,8 +677,8 @@ button:hover{
     margin-top: 5px;
     margin-left: 10px;
     width: 320px;
-    height: 10px;
-    background-color:rgb(39, 39, 39);
+    height: 6px;
+    background-color:rgb(33, 33, 33);
     float: left;
 }
 .S_Trend_Graph2{
@@ -684,8 +686,8 @@ button:hover{
     margin-top: 5px;
     margin-left: 10px;
     width: 150px;
-    height: 10px;
-    background-color:rgb(244,216,35);
+    height: 6px;
+    background-color: rgb(244,216,35);
     float: left;
 }
 .S_Trend_avg{
@@ -699,11 +701,12 @@ button:hover{
 .S_Trend_Tri{
     width: 0px;
     height: 0px;
-    border-bottom: 10px solid rgb(244,216,35);
+    border-bottom: 10px solid rgb(33, 33, 33);
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     margin-top: 2px;
     margin-left: 23px;
+    padding-top: 2px;
   }
 .S_Trend_avg1{
     clear: both;
