--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,9 @@ input::placeholder{
     color: black;
     opacity: 1;
     margin-left: 2px;
-    font-size: 5pt;
+    font-size: 10pt;
     padding-left: 5px;
+    font-weight: 400;
 }
 .S_search1::placeholder{
     color: gray;
@@ -138,6 +139,7 @@ button:hover{
     font-size: 13pt;
     font-weight: bold;
     border-radius: 3px;
+    
 }
 .cha{
     margin-top: 7px;
@@ -150,13 +152,13 @@ button:hover{
 .cha0{
     background-color: rgb(120, 120, 120);
     width: 390px;
-    height: 40px;
+    height: 36px;
     font-size: 17pt;
     padding-top: 5px;
     border-radius: 3px 3px 0px 0px / 3px 3px 0px 0px ;
+    border-bottom: 4px solid rgb(244,216,35);
 }
 .cha1{
-    background-color: rgb(120, 120, 120);
     margin-top: 6px;
     height: 30px;
 }
@@ -169,11 +171,13 @@ button:hover{
     border-color: rgba(0,0,0,0);
     background-color: rgb(83, 83, 83);
     padding-right: 5px;
-    width: 125px;
-    height: 18px;
-    border-radius: 0px;
+    width: 310px;
+    height: 16px;
+    border-radius: 3px;
     margin-top: 3px;
-    margin-right: 5px;
+    margin-right: 34px;
+    padding-bottom: 4px;
+    border-bottom: 3px solid rgb(120, 120, 120);
 }
 .cha3{
     word-spacing: 13px;
@@ -238,31 +242,44 @@ button:hover{
     text-align: left;
 }
 .rank3rank{
-    padding-left: 42px;
+    display: inline-block;
+    width: 75px;
+    text-align: center;
 }
 .rank3cha{
-    padding-left: 70px;
+    display: inline-block;
+    width: 180px;
+    text-align: center;
 }
 .rank3weapone{
-    padding-left: 72px;
+    display: inline-block;
+    width: 50px;
+    text-align: center;
 }
 .rank3tier{
-    padding-left: 49px;
+    display: inline-block;
+    width: 80px;
+    text-align: center;
 }
 .rank3win{
-    padding-left: 47px;
+    display: inline-block;
+    width: 80px;
+    text-align: center;
 }
 .rank3pick{
-    padding-left: 46px;
+    display: inline-block;
+    width: 80px;
+    text-align: center;
 }
 .rank3kill{
-    padding-left: 42px;
+    display: inline-block;
+    width: 80px;
+    text-align: center;
 }
 .rank3avg{
-    padding-left: 19px;
-}
-.rank3recent{
-    padding-left: 30px;
+    display: inline-block;
+    width: 80px;
+    text-align: center;
 }
 .rank3rank1{
     text-align: center;
@@ -277,7 +294,7 @@ button:hover{
     text-align: center;
     vertical-align: middle;
     width: 10px;
-    margin-left: -32px;
+    margin-left: -20px;
 }
 .rank3Updown1{
     text-align: center;
@@ -290,71 +307,43 @@ button:hover{
 .rank3cha1{
     vertical-align: middle;
     width: 100px;
+    margin-left: 5px;
 }
 .rank3weapone1{
     vertical-align: middle;
     width: 42px;
     border-radius: 7px;
-    margin-left: 32px;
+    margin-left: 41px;
 }
 .rank3tier1{
     vertical-align: middle;
     width: 45px;
-    margin-left: 27px;
+    margin-left: 21px;
 }
 .rank3win1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 50px;
-    margin-left: 22px;
+    width: 80px;
+    margin-left: 18px;
 }
 .rank3pick1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 75px;
-    margin-left: 6px;
+    width: 80px;
 }
 .rank3kill1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 35px;
-    margin-left: 11px;
+    width: 74px;
 }
 .rank3avg1{
     text-align: center;
     vertical-align: middle;
     display: inline-block;
-    width: 35px;
-    margin-left: 24px;
-}
-.rank3recentBurf{
-    text-align: center;
-    vertical-align: middle;
-    font-family: 'Big Shoulders Stencil Display';
-    color: rgb(0, 185, 0);
-    display: inline-block;
-    width: 50px;
-    margin-left: 25px;
-    font-size: 20pt;
-    border: rgb(0, 185, 0) 5px double;
-    padding-left: 1px;
-    padding-right: 1px;
-}
-.rank3recentNurf{
-    text-align: center;
-    vertical-align: middle;
-    font-family: 'Big Shoulders Stencil Display';
-    color: rgb(185, 0, 0);
-    display: inline-block;
-    width: 50px;
-    margin-left: 25px;
-    font-size: 20pt;
-    border: rgb(185, 0, 0) 5px double;
-    padding-left: 1px;
-    padding-right: 1px;
+    width: 80px;
 }
 /*
 .tabHeaders a {
@@ -508,28 +497,6 @@ button:hover{
     font-size: 17pt;
     text-align: center;
     position: absolute;
-}
-.S_top-Nurf{
-    position: absolute;
-    margin-top: 5px;
-    margin-left: 200px;
-    color: rgb(185, 0, 0);
-    font-family: "Big Shoulders Stencil Display";
-    font-size: 30pt;
-    border: rgb(185, 0, 0) 6px double;
-    padding-left: 6px;
-    padding-right: 6px;
-}
-.S_top-Burf{
-    position: absolute;
-    margin-top: 5px;
-    margin-left: 200px;
-    color: rgb(0, 185, 0);
-    font-family: "Big Shoulders Stencil Display";
-    font-size: 30pt;
-    border: rgb(0, 185, 0) 6px double;
-    padding-left: 6px;
-    padding-right: 6px;
 }
 .tabHeader4{
     width: 70px;
