언어 설정 가능하게 변경 item -> armor로 리네임 tools에 CSVToJson추가
Main
  Character : 클릭시 링크, 정렬 위치 깨지는 문제 수정

Detail
  SubBanner : 캐릭터 검색 기능
  Armor : 추가

--- a/src/index.css
+++ b/src/index.css
@@ -191,6 +191,9 @@ button:hover{
     width: 95px;
     background-color: rgb(120, 120, 120);
 }
+.chaimg-blank{
+    width: 95px;
+}
 .main-right{
     float: right;
     background-color: rgb(83, 83, 83);
@@ -736,7 +739,7 @@ button:hover{
 .S_Skill2_info{
     white-space: pre-line;
     font-size: 13pt;
-    margin-top: -5px;
+    margin-top: 15px;
 }
 .S_right{
     width: 390px;
