--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,10 @@ html{
 body {
   margin: 0;
   background-color: rgb(37, 37, 37);
-  font-family: "NOTO SANS KR";
+  font-family: "Noto Sans KR", "noto sans sc";
   font-weight: 500;
 }
+
 input:focus{
     outline: none;
 }
@@ -52,6 +53,7 @@ button:hover{
 /* 1page */
 .banner {
     background-color: rgb(83, 83, 83);
+    width: 100%;
     height: 450px;
     text-align: center;
 }
@@ -134,7 +136,7 @@ button:hover{
     border-radius: 3px;
 }
 .search1{
-    width: 313px;
+    width: 303px;
     height: 22px;
     float: left;
     border-color: rgba(0,0,0,0);
@@ -147,7 +149,7 @@ button:hover{
     background-color:  rgb(120, 120, 120);
     border-radius: 0px;
     height: 37px;
-    width: 61px;
+    width: 71px;
     font-size: 13pt;
     font-weight: bold;
     border-radius: 3px;
@@ -266,7 +268,7 @@ button:hover{
     width: 180px;
     text-align: center;
 }
-.rank3weapone{
+.rank3weapon{
     display: inline-block;
     width: 50px;
     text-align: center;
@@ -324,7 +326,7 @@ button:hover{
     width: 100px;
     margin-left: 5px;
 }
-.rank3weapone1{
+.rank3weapon1{
     vertical-align: middle;
     width: 42px;
     border-radius: 7px;
@@ -549,11 +551,11 @@ button:hover{
     margin-right: -10px;
     margin-top: 110px;
 }
-.S_top-weapone1{
+.S_top-weapon1{
     width: 70px;
     background-color: rgb(120, 120, 120);
 }
-.S_top-weapone2{
+.S_top-weapon2{
     display: inline-block;
     margin-top: -5px;
     margin-left: 2px;
@@ -777,7 +779,7 @@ button:hover{
 }
 .S_Skill2_info{
     white-space: pre-line;
-    font-size: 13pt;
+    font-size: 12pt;
     margin-top: 15px;
 }
 .S_right{
@@ -851,13 +853,13 @@ button:hover{
 }
 .S_item_sort3{
     float: left;
-    width: 40px;
-    margin-left: 85px;
+    width: 60px;
+    margin-left: 75px;
 }
 .S_item_sort4{
     float: left;
-    width: 40px;
-    margin-left: 20px;
+    width: 60px;
+    margin-left: 2px;
 }
 .S_item_sort_b{
     float: left;
@@ -878,18 +880,18 @@ button:hover{
 }
 .S_item_sort_b3{
     float: left;
-    width: 40px;
-    margin-left: 130px;
+    width: 80px;
+    margin-left: 107px;
 }
 .S_item_rank{
     clear: both;
     font-size: 11pt;
     height: 40px;
     vertical-align: middle;
-    margin-top: 6px;
-    padding-top: 5px;
+    margin-top: 5px;
     text-align: left;
     background-color: rgb(120, 120, 120);
+    display: table;
 }
 .S_item_rank1{
     vertical-align: middle;
@@ -905,15 +907,18 @@ button:hover{
     width: 65px;
     margin-left: 15px;
     text-align: center;
-    border-radius: 2px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 4px;
 }
 .S_item_rank3{
-    vertical-align: middle;
-    display: inline-block;
+    display: table-cell;
     width: 128px;
-    font-size: 12pt;
-    padding-bottom: 5px;
+    height: 40px;
+    font-size: 11pt;
     text-align: center;
+    vertical-align: middle;
+    
 }
 .S_item_rank4{
     vertical-align: middle;
@@ -931,6 +936,7 @@ button:hover{
     text-align: center;
     font-size: 10pt;
     color:  rgb(39, 39, 39);
+    padding-right: 15px;
 }
 .S_item_rank6{
     vertical-align: middle;
@@ -940,5 +946,6 @@ button:hover{
     text-align: center;
     font-size: 10pt;
     color:  rgb(39, 39, 39);
+    padding-right: 29px;
 }
 
