언어별 캐릭터 검색 언어 cn -> scn
랭크, 아이디 검색 추가

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ input::placeholder{
     font-family: "noto sans kr";
     font-weight: 300;
 }
+a{
+    color: black;
+}
 .chasearch::placeholder{
     color: black;
     opacity: 1;
