--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,12 @@
     font-style: normal;
 }
 html{
-    padding-bottom: 100px;
 }
 body {
   margin: 0;
   background-color: rgb(37, 37, 37);
   font-family: "Noto Sans KR", "noto sans sc";
   font-weight: 500;
-  min-height: 1700px;
 }
 .Ad_box_L{
     width: 300px;
@@ -29,13 +27,6 @@ body {
     position: absolute;
     top: 480px;
     right: 40px;
-}
-.Ad_box_B{
-    width: 1150px;
-    height: 400px;
-    position: absolute;
-    bottom: -1700px;
-    margin-left: calc(50% - 575px);
 }
 input:focus{
     outline: none;
@@ -147,7 +138,7 @@ button:hover{
     margin: auto;
     margin-top: 25px;
     width: 1152px;
-    background-color: rgb(83, 83, 83);
+    overflow: hidden;
 }
 .main-left{
     float: left;
@@ -531,6 +522,8 @@ button:hover{
     width: 1152px;
     margin: auto;
     margin-top: 40px;
+    min-height: 1555px;
+    overflow: hidden;
 }
 .S_top{}
 .S_top-cha{
@@ -963,5 +956,30 @@ button:hover{
     color:  rgb(39, 39, 39);
     padding-right: 29px;
 }
-
+.footer{
+    width: 1150px;
+    margin-top: 50px;
+    border-top: 2px solid rgb(58, 58, 58);
+    text-align: left;
+    vertical-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.footer_logo{
+    width: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    float: left;
+}
+.footer_button{
+    border-color: rgba(0,0,0,0);
+    background-color:  rgba(0,0,0,0);
+    border-radius: 0px;
+    font-size: 13pt;
+    font-weight: bold;
+    float: right;
+    margin-top: 10px;
+    margin-right: 5px;
+}
 
