하단 ad박스 추가

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,12 @@ body {
   font-family: "Noto Sans KR", "noto sans sc";
   font-weight: 500;
 }
+/* ADs */
 .Ad_box_L{
     width: 300px;
     height: 400px;
     position: absolute;
+    background-color: white;
     top: 480px;
     left: 40px;
 }
@@ -25,9 +27,25 @@ body {
     width: 300px;
     height: 400px;
     position: absolute;
+    background-color: white;
     top: 480px;
     right: 40px;
 }
+.Ad_box_Main{
+    width: 300px;
+    height: 250px;
+    background-color: white;
+    margin-left: 45px;
+    margin-top: 30px;
+}
+.Ad_box_Detail{
+    width: 728px;
+    height: 90px;
+    background-color: white;
+    margin-left: 11px;
+    margin-top: 15px;
+}
+/* all pages */
 input:focus{
     outline: none;
 }
@@ -65,7 +83,7 @@ button:hover{
     cursor: pointer;
     background-color:  rgba(0,0,0,0);
 }
-/* 1page */
+/* 1 page */
 .banner {
     background-color: rgb(83, 83, 83);
     height: 450px;
@@ -447,7 +465,7 @@ button:hover{
     margin-left: 3px;
     margin-right: -8px;
   }
-/* 2page */
+/* 2 page */
 .S_banner{
     background-color: rgb(83, 83, 83);
     height: 80px;
@@ -732,7 +750,6 @@ button:hover{
 }
 .S_Skill{
     margin-top: 15px;
-    margin-bottom: 40px;
     padding-bottom: 20px;
     width: 750px;
     height: auto;
