--- a/src/index.css
+++ b/src/index.css
@@ -368,6 +368,30 @@ button:hover{
     width: 45px;
     margin-left: 21px;
 }
+.rank_span_tooltip{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgb(37, 37, 37);
+    position: absolute;
+    z-index: 1;
+    font-size: 10pt;
+    white-space: pre-line;
+    word-break: keep-all;
+    border-radius: 10px;
+    color:white;
+    font-weight: 300;
+    padding: 5px;
+    word-spacing: 5px;
+    text-align: center;
+}
+.rank_span:hover .rank_span_tooltip{
+    visibility: visible;
+}
+.rank_span{
+    display: inline-block;
+    width: 60px;
+}
+
 .rank3win1{
     text-align: center;
     vertical-align: middle;
@@ -1006,5 +1030,16 @@ button:hover{
     float: right;
     margin-top: 10px;
     margin-right: 5px;
+}
+.footer_span{
+    float: left;
+    font-size: 12pt;
+    text-align: left;
+    display: inline-block;
+    width: 900px;
+    height: 90px;
+    margin-top: 15px;
+    margin-left: 15px;
+    white-space: pre-line;
 }
 
