--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ button:hover{
 }
 .S_item_tooltip2{
     visibility: hidden;
-    width: 200px;
+    min-width: 200px;
     background-color: rgb(23, 21, 32);
     position: absolute;
     z-index: 1;
@@ -170,7 +170,7 @@ button:hover{
 }
 .S_item_tooltip3{
     visibility: hidden;
-    width: 200px;
+    min-width: 200px;
     background-color: rgb(23, 21, 32);
     position: absolute;
     z-index: 1;
@@ -187,7 +187,7 @@ button:hover{
 }
 .S_skill_tooltip{
     visibility: hidden;
-    width: 200px;
+    min-width: 200px;
     background-color: rgb(23, 21, 32);
     position: absolute;
     z-index: 1;
@@ -200,7 +200,7 @@ button:hover{
     padding: 5px;
     word-spacing: 5px;
     text-align: center;
-    margin-top: 85px;
+    margin-top: 5px;
 }
 .rank_span:hover .rank_span_tooltip{
     visibility: visible;
@@ -810,7 +810,7 @@ button:hover{
     color: white;
 }
 .S_top-box{
-    width: 955px;
+    width: 550px;
     float: left;
 }
 .tabHeader4{
@@ -845,25 +845,28 @@ button:hover{
 .S_top-stat{
     width: 170px;
     height: 25px;
-    float: right;
-    margin-left: 10px;
-    margin-top: 15px;
-    border-bottom: 1px solid #3b4147;
+    float:  right;
+    margin-top: 0px;
+    margin-left: 15px;
+    border-radius: 3px;
+    
 }
 .S_top-stat1{
     width: 170px;
     height: 25px;
-    background-color: rgb(38, 35, 53);
+    background-color: rgb(35, 27, 47);
     float: right;
     text-align: center;
     border-radius: 2px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid rgb(244,216,35);
 }
 .S_top-stat2{
     clear: both;
     float: left;
     text-align: left;
     margin-left: 11px;
-    margin-top: 7px;
+    margin-top: 0px;
     color: rgb(189, 189, 189);
     font-weight: 300;
     font-size: 11pt;
@@ -872,7 +875,7 @@ button:hover{
     float: right;
     text-align: center;
     margin-right: 11px;
-    margin-top: 7px;
+    margin-top: 0px;
     color: rgb(189, 189, 189);
     font-weight: 300;
     font-size: 11pt;
@@ -1019,7 +1022,7 @@ button:hover{
     background-color: rgb(38, 35, 53);
     border-radius: 3px;
     border-bottom: 1px solid #3b4147;
-    height: 340px;
+    height: 500px;
 }
 .S_Skill0{
     width: 750px;
@@ -1080,16 +1083,102 @@ button:hover{
     color: gray;
     border-bottom: 1px solid #3b4147;
 }
+.skill_imgbox{
+    clear: both;
+}
 .skill_img{
-    width: 60px;
+    width: 50px;
     margin-top: 20px;
-    margin-left: 180px;
-    margin-right: -130px;
+    margin-left: 230px;
+    margin-right: -200px;
     float: left;
 }
 .skill_img1{
-    width: 60px;
+    width: 50px;
     border: solid 1px  rgb(244,216,35);
+    border-radius: 5px;
+}
+.skill_box0{
+    clear: both;
+    background-color: white;
+}
+.skill_box{
+    float: left;
+    margin-top: 85px;
+    margin-left: 74px;
+    margin-right: -70px;
+    text-align: center;
+}
+.skill_level{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    margin-top: 5px;
+    background-color: rgb(38, 35, 53);
+    font-size: 13pt;
+}
+.skill_q{
+    background-color: #171520; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    font-size: 12pt;
+    border-radius: 4px;
+    color: rgb(224, 54, 11);
+    font-weight: 400;
+    border: 1px solid #3b4147;
+}
+.skill_w{
+    background-color: #171520; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    font-size: 12pt;
+    border-radius: 4px;
+    color: rgb(71, 172, 40);
+    font-weight: 400;
+    border: 1px solid #3b4147;
+}
+.skill_e{
+    background-color: #171520; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    font-size: 12pt;
+    border-radius: 4px;
+    color: #007fd3;
+    font-weight: 400;
+    border: 1px solid #3b4147;
+}
+.skill_r{
+    background-color: #171520; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    font-size: 12pt;
+    border-radius: 4px;
+    color: rgb(244, 178, 35);
+    font-weight: 400;
+    border: 1px solid #3b4147;
+}
+.skill_t{
+    background-color: #171520; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    font-size: 12pt;
+    border-radius: 4px;
+    color: rgb(170, 170, 170);
+    font-weight: 400;
+    border: 1px solid #3b4147;
+}
+.skill_blank{
+    background-color: #241b2f; 
+    margin-top: 5px;
+    width: 23px;
+    height: 23px;
+    border-radius: 4px;
+    border: 1px solid #3b4147;
 }
 .S_right{
     width: 390px;
@@ -1180,8 +1269,8 @@ button:hover{
 }
 .S_item_sort4{
     float: left;
-    width: 67px;
-    margin-left: 2px;
+    width: 77px;
+    margin-left: -8px;
 }
 .S_item_sort_b{
     float: left;
@@ -1204,8 +1293,8 @@ button:hover{
 }
 .S_item_sort_b3{
     float: left;
-    width: 80px;
-    margin-left: 112px;
+    width: 100px;
+    margin-left: 105px;
 }
 .S_item_rank{
     width: 390px;
