--- a/src/index.css
+++ b/src/index.css
@@ -388,6 +388,7 @@ button:hover{
     float: right;
     border-color: rgba(0,0,0,0);
     background-color: rgb(38, 35, 53);
+    color: rgb(209, 209, 209);
     padding-right: 5px;
     width: 310px;
     height: 16px;
@@ -1101,9 +1102,11 @@ button:hover{
 }
 .skill_span{
     width: 50px;
+    height: 50px;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
+    font-size: 24pt;
     border: solid 1px  rgb(244,216,35);
     border-radius: 5px;
 }
