아이템트리 추가, 드롭박스수정, 하트 버그 수정, 이미지추가

--- a/src/index.css
+++ b/src/index.css
@@ -746,6 +746,9 @@ button:hover{
     padding-bottom: 3px;
     text-align: left;
     border-radius: 3px;
+    z-index: 1;
+    max-height: 260px;
+    overflow: scroll;
 }
 .S_search4{
     width: 300px;
